--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Video"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".Menu"></activity>
+        <activity
+            android:name=".Video"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FolderList"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
